# bayos

./: .gitignore  Cargo.toml  Makefile  README.md  _astylerc  build.rs  limine.conf  rust-toolchain.toml
boot/: Makefile  boot.ld  boot_sector.asm  bootloader_16.asm  bootloader_16_2.c  bootloader_16_2.c16  bootloader_32.c  bootloader_32.c32
boot/bios/: Makefile  README  boot.ld  boot_sector.asm  bootloader.asm  bootloader_16.asm  bootloader_32.c32
boot/uefi/: Makefile  main.c
boot/uefi/uefi/: unistd.c
docs/: code_style  syscalls.md
kernel/: Cargo.toml  Makefile  kernel.ld  main.c
kernel/core/types/: types.h
kernel/include/: acpi.h  alloc.h  cdrom.h  elf.h  fail.h  framebuffer.h  gdt.h  interrupts.h  keyboard.h  limine.h  lock.h  memory.h  num_sys.h  ports.h  queue.h  scheduler.h  stdarg.h  stdio.h  string.h  tar.h  tty.h
kernel/include/types/: limits.h  types.h
kernel/src/: acpi.c  acpi.rs  alloc.c  allocator.rs  cdrom.c  cpio.d  elf.c  elf.rs  exception_handler.asm  fail.c  framebuffer.c  framebuffer.rs  gdt.c  gdt.rs  int.rs  interrupts.c  keyboard.c  lock.c  main.c  main.rs  memory.c  memory.rs  ports.c  queue.c  sched.rs  scheduler.c  string.c  syscall.rs  tar.c  tty.c
kernel/src/stdio/: num_sys.c  printf.c  puts.c
kernel/src/vfs/: mod.rs  pipe.rs
src/: main.rs
user/: Cargo.toml  Makefile  build.rs  init.asm  init.c  shell.asm
user/cross/: Cargo.toml  binutils.patch  build.rs  gcc.patch  mlibc.patch
