[package]
name = "os"
version = "0.1.0"
edition = "2024"

[dependencies]
ovmf-prebuilt = "0.2.4"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
user = { path = "user" }
bootloader = "0.11.12"

[profile.dev]
strip = "debuginfo"

[profile.release]
strip = "debuginfo"
